Fix bizarre whitespace bug in Firefox. Closes #669

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -267,6 +267,11 @@ body
 {
     overflow-x: hidden;
 }
+
+html
+{
+    overflow-x: hidden;
+}
     
 @media #{$small-only}
 {
